--- a/privacy_classifier/notebooks/playground_nb0.ipynb
+++ b/privacy_classifier/notebooks/playground_nb0.ipynb
@@ -9,34 +9,7 @@
         "# ! pip install --upgrade pip\n",
         "# ! pip install dsframework\n",
         "# ! pip install torch\n",
-        "# ! pip install transformers\n",
         "# ! pip install adapter-transformers"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# ! pip uninstall transformers\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[33mWARNING: Package(s) not found: transformers\u001b[0m\n"
-          ]
-        }
-      ],
-      "source": [
-        "# !pip show transformers"
       ]
     },
     {
@@ -67,7 +40,21 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/daniel.aviram/enjoy_the_ride/playforfun/gaia/venv_39/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaAdapterModel: ['lm_head.decoder.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.bias']\n",
+            "- This IS expected if you are initializing RobertaAdapterModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing RobertaAdapterModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+            "Some weights of RobertaAdapterModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.embeddings.position_ids']\n",
+            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+          ]
+        }
+      ],
       "source": [
         "from pipeline.pipeline import PrivacyClassifierPipeline\n",
         "pipeline = PrivacyClassifierPipeline()"
@@ -91,6 +78,14 @@
       },
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[{'label': 'LABEL_1', 'score': 0.8232402801513672}]\n",
+            "[{'label': 'LABEL_1', 'score': 0.7819673418998718}]\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
               "[{'text': 'it works ', 'pred': None, 'prob': -1.0},\n",
@@ -108,41 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/daniel.aviram/enjoy_the_ride/playforfun/gaia/venv_39/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
-      "source": [
-        "from transformers import RobertaTokenizer\n",
-        "\n",
-        "tokenizer = RobertaTokenizer.from_pretrained(\"roberta-base\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from transformers import RobertaConfig\n",
-        "\n",
-        "config = RobertaConfig.from_pretrained(\n",
-        "    \"roberta-base\",\n",
-        "    num_labels=2,\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -158,7 +119,15 @@
         }
       ],
       "source": [
-        "from transformers import RobertaAdapterModel\n",
+        "from transformers import RobertaTokenizer, RobertaConfig, RobertaAdapterModel\n",
+        "\n",
+        "tokenizer = RobertaTokenizer.from_pretrained(\"roberta-base\")\n",
+        "\n",
+        "config = RobertaConfig.from_pretrained(\n",
+        "    \"roberta-base\",\n",
+        "    num_labels=2,\n",
+        ")\n",
+        "\n",
         "model = RobertaAdapterModel.from_pretrained(\n",
         "    \"roberta-base\",\n",
         "    config=config,\n",
@@ -167,21 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# from transformers import RobertaModelWithHeads\n",
-        "\n",
-        "# model = RobertaModelWithHeads.from_pretrained(\n",
-        "#     \"roberta-base\",\n",
-        "#     config=config,\n",
-        "# )"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -190,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -199,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -210,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -219,7 +174,7 @@
               "[{'label': 'LABEL_0', 'score': 0.9752956032752991}]"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
