model runs in pipeline

--- a/privacy_classifier/notebooks/playground_nb0.ipynb
+++ b/privacy_classifier/notebooks/playground_nb0.ipynb
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "Req2KPITqsoq"
       },
@@ -81,24 +81,24 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[{'label': 'LABEL_1', 'score': 0.8232402801513672}]\n",
-            "[{'label': 'LABEL_1', 'score': 0.7819673418998718}]\n"
+            "this is shit  [{'label': 'LABEL_0', 'score': 0.9899955987930298}]\n",
+            " well it looks awsome [{'label': 'LABEL_0', 'score': 0.9978135824203491}]\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "[{'text': 'it works ', 'pred': None, 'prob': -1.0},\n",
-              " {'text': ' well i sure hope it does', 'pred': None, 'prob': -1.0}]"
+              "[{'text': 'this is shit ', 'pred': None, 'prob': -1.0},\n",
+              " {'text': ' well it looks awsome', 'pred': None, 'prob': -1.0}]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "pipeline(text='it works \\n\\n well i sure hope it does')"
+        "pipeline(text='this is shit \\n\\n this is awsome')"
       ]
     },
     {
@@ -120,6 +120,7 @@
       ],
       "source": [
         "from transformers import RobertaTokenizer, RobertaConfig, RobertaAdapterModel\n",
+        "\n",
         "\n",
         "tokenizer = RobertaTokenizer.from_pretrained(\"roberta-base\")\n",
         "\n",
